# mml

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/dataset/: food101.yaml  hatememes.yaml  mmimdb.yaml
configs/experiment/: mora_food101.yaml  mora_hatememes.yaml  mora_hatememes_0.9_both.yaml  mora_mmimdb.yaml
configs/hparams_search/: nni.yaml
configs/hparams_search/dropout/: nni_config.yaml  search_space.json
configs/hparams_search/ep_wm/: nni_config.yaml  search_space.json
configs/hparams_search/lr_bs/: nni_config.yaml  search_space.json
configs/hparams_search/mmimdb/: nni_config.yaml  search_space.json
configs/hparams_search/position/: nni_config.yaml  search_space.json
configs/hparams_search/rank/: nni_config.yaml  search_space.json
configs/hparams_search/rec/: nni_config.yaml  search_space.json
configs/hparams_search/startlayeridx/: nni_config.yaml  search_space.json
configs/hparams_search/strength/: nni_config.yaml  search_space.json
configs/hparams_search/wd/: nni_config.yaml  search_space.json
configs/model/: clip_mora.yaml
configs/test/: default.yaml
configs/train/: default.yaml
scripts/: hatememes.sh  preprocess.sh
src/: main.py
src/data/: builder.py  dataset.py
src/engine/: evaluator.py  trainer.py
src/models/: builder.py  clip_mora.py  modeling_clip.py  utils.py
src/utils/: __init__.py  env.py  hparams.py  preprocess.py
